--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "ts-node-dev src/index.ts"
   },
   "author": "",
   "license": "ISC",
